WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246241
[iOS] the second pointer region request in a row can sometimes get stuck
https://bugs.webkit.org/show_bug.cgi?id=246241
Summary
[iOS] the second pointer region request in a row can sometimes get stuck
Devin Rousso
Reported
2022-10-07 16:43:19 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2022-10-07 16:43:35 PDT
<
rdar://problem/100143379
>
Devin Rousso
Comment 2
2022-10-07 16:51:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5159
EWS
Comment 3
2022-10-12 15:17:41 PDT
Committed
255457@main
(4901da06c405): <
https://commits.webkit.org/255457@main
> Reviewed commits have been landed. Closing PR #5159 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug