[iOS] the second pointer region request in a row can sometimes get stuck https://bugs.webkit.org/show_bug.cgi?id=246241 <rdar://problem/100143379>

Reviewed by Tim Horton.

If a second pointer region request is made before the UIProcess is given updated position info, and
the first pointer region request was handled synchronously with an approximation, the second pointer
request's `completion` (which was saved/deferred) will never be called due to an early return.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _pointerInteraction:regionForRequest:defaultRegion:completion:]):

Canonical link: https://commits.webkit.org/255457@main